--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -95,6 +95,8 @@ body {
   padding: 0;
   background-color: $white;
 
+  scrollbar-color: transparent transparent;
+  scrollbar-width: none;
   
   ::-webkit-scrollbar {
     width: 0px;
